Initial prototypish code. Test currently failing.

--- a/test/scratchit.html
+++ b/test/scratchit.html
@@ -20,9 +20,9 @@
   <body>
     <div id="qunit"></div>
     <div id="qunit-fixture">
-      <canvas id="qunit-canvas" width="5" height="5"></canvas>
-      <span>normal test markup</span>
-      <span>awesome test markup</span>
+      <span>stuff</span>
+      <span>stuff</span>
+      <span>stuff</span>
     </div>
   </body>
 </html>
