remove some unnecessary code

--- a/index.html
+++ b/index.html
@@ -15,18 +15,14 @@
 
   </head>
   <body>
-    <br/>
-    <br/>
-    <br/>
-    <br/>
     <div class="scratchit">
-		<img style="display:none" src="src/scratcher.jpg" width="400" height="200" />
+		<img src="src/scratcher.jpg" width="400" height="200" />
 		<img src="src/cat.jpg" width="400" height="200" />
       <canvas width="400" height="200"></canvas>
     </div>
     
     <div class="scratchit">
-		<img style="display:none" src="src/scratcher2.jpg" width="400" height="200" />
+		<img src="src/scratcher2.jpg" width="400" height="200" />
 		<img src="src/cat.jpg" width="400" height="200" />
       <canvas width="400" height="200"></canvas>
     </div>
